# SMILES-corrector

./: .gitignore  LICENSE  README.md  explore_tutorial.ipynb  explore_tutorial.py  pyproject.toml
analysis/: checksmiles.py  exploration_novelty.py  figure.py  setup.py  similarity.py
analysis/kldiv/: calc_kldiv.py  kldiv_compare.py
data/: papyrus_rnn_XS.csv
data/errors/split/: PAPYRUS_200_multiple_12_errors_dev.csv  PAPYRUS_200_multiple_12_errors_train.csv
src/uncorrupt_smiles/: __init__.py  cli.py  data.py  fetch_data.py  invalid_smiles.py  preprocess.py  transformer.py  uncorrupt.py  vocab.py
src/uncorrupt_smiles/utils/: chem.py  metric.py  sanifix.py  tokenizer.py
tests/: conftest.py  test_cli.py  test_data.py  test_fetch_data.py  test_invalidSMILES.py  test_invalid_smiles.py  test_preprocess.py  test_tokenizer.py  test_transformer.py  test_uncorrupt.py  test_vocab.py
